[tool.poetry]
name = "stock-quant"
version = "0.1.0"
description = ""
authors = ["adolf <adolf1321794021@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
akshare = "^1.14.77"
baostock = "^0.8.9"
pandas = "^2.2.2"
pandas-ta = "^0.3.14b0"
finta = "^1.3"
tqdm = "^4.66.5"
pyecharts = "^2.0.6"
schedule = "^1.2.2"
streamlit = "^1.38.0"
streamlit-echarts = "^0.4.0"
tabulate = "^0.9.0"
loguru = "^0.7.2"
pathos = "^0.3.2"
dask = {extras = ["complete"], version = "^2024.9.0"}
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
fastapi = "^0.114.2"
uvicorn = "^0.30.6"
pymongo = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
