[tool.poetry]
name = "stock-quant"
version = "0.1.0"
description = ""
authors = ["adolf <adolf1321794021@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
akshare = "^1.14.77"
baostock = "^0.8.9"
pandas = "^2.2.2"
tqdm = "^4.66.5"
pyecharts = "^2.0.6"
schedule = "^1.2.2"
streamlit = "^1.38.0"
streamlit-echarts = "^0.4.0"
tabulate = "^0.9.0"
loguru = "^0.7.2"
pathos = "^0.3.2"
dask = {extras = ["complete"], version = "^2024.9.0"}
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
fastapi = "^0.114.2"
uvicorn = "^0.30.6"
pymongo = "^4.8.0"
ruff = "^0.6.5"
ray = "^2.35.0"


[tool.poetry.group.dev.dependencies]
lightgbm = "^4.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# https://github.com/astral-sh/ruff
# https://docs.astral.sh/ruff/settings
output-format = "grouped"
show-fixes = true
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 79
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = [  # UPDATEME with additional rules from https://docs.astral.sh/ruff/rules/
  "F",
  "E",
  "W",
  "I",
  "N",
  "S",
  "B",
  "UP",
  "C90",
  "T20",
  "EM",
  "PL",
  "C4",
  "PT",
  "TD",
  "ICN",
  "RET",
  "RSE",
  "ARG",
  "SIM",
  "TID",
  "PTH",
  "TCH",
  "FIX",
  "FLY",
  "YTT",
  "RUF"
]
ignore = ["D200", "D104", "E501", "D101", "D100", "D102", "ANN101", "T201"]
task-tags = ["TODO", "FIXME", "XXX", "UPDATEME"]  # UPDATEME by modifying or removing this setting after addressing all UPDATEMEs


[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pycodestyle]
max-line-length = 88
max-doc-length = 90

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pylint]
max-bool-expr = 3

[tool.ruff.lint.isort]
split-on-trailing-comma = false
sections.typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections.testing = ["pytest", "tests"]
section-order = [
  "future",
  "typing",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
  "testing"
]